--- a/src/main/resources/templates/test1.html
+++ b/src/main/resources/templates/test1.html
@@ -6,6 +6,8 @@
 <body>
 
 <a href="http://localhost:8080/addCategory">Adding category</a>
+
+<a href="http://localhost:8080/sub">Adding sub category</a>
 <!-- Include _menu.html -->
 <!--<th:block th:include="/_menu"></th:block>-->
 
