--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h2>Adding category/sub</h2>
+<h2>Adding category</h2>
 <a href="http://localhost:8080/sub">Adding sub category</a>
 <br> <br>
 <form th:action="@{/addCategory}" th:object="${categories}" method="POST">
