--- a/src/main/resources/templates/sub.html
+++ b/src/main/resources/templates/sub.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h2>Adding category/sub</h2>
+<h2>Adding sub category</h2>
 <th> </th>
 <style>
     ul.el > li {
@@ -29,7 +29,7 @@
         </select>
         </li>
     </ul>
-    
+
     <table>
 
         <th> Sub categories: </th>
