--- a/src/main/resources/templates/sub.html
+++ b/src/main/resources/templates/sub.html
@@ -15,6 +15,9 @@
 </style>
 <a style="margin-: 32px" href="http://localhost:8080/addCategory">Adding category</a>
 <br> <br>
+<a style="margin-: 32px" href="http://localhost:8080">Main</a>
+<br> <br>
+
 <form th:action="@{/sub}"  method="POST">
 <!--    <form th:action="@{/addSub}" th:object="${categories}" method="POST">-->
 
