--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -8,6 +8,9 @@
 <h2>Adding category</h2>
 <a href="http://localhost:8080/sub">Adding sub category</a>
 <br> <br>
+<a style="margin-: 32px" href="http://localhost:8080">Main</a>
+<br><br>
+
 <form th:action="@{/addCategory}" th:object="${categories}" method="POST">
 
     <input type="text" name="category_name" placeholder="Name of new category"/>
