--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -4,6 +4,15 @@
     <title>Test</title>
 </head>
 <body>
+
+<div>
+<!--<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>-->
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
+</div>
+
+
 <a href="http://localhost:8080/addCategory">Adding category</a>
 <br> <br>
 <a href="http://localhost:8080/sub">Adding sub category</a>
