+save to XLS file

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -121,7 +121,8 @@
     </table>
     <br> <br>
 
-
+    <td> <input type="text" name="fileName" placeholder="Name of file"/></td>
+    <br> <br>
     <input type="submit" value="Filter" />
     <br> <br>
 
