--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -174,6 +174,12 @@
             <td><span th:text="${company.getFounder().mobile}"> </span></td>
             <td><span th:text="${company.getFounder().linkedin}"> </span></td>
             <td><span th:text="${company.getFounder().country}"> </span></td>
+
+<!--            <td> <img th:src="@{/img/{filename}(filename = ${company.filename})}"></td>-->
+<!--            <td> <hr th:src="@{/file/{infoFilename}(infoFilename = ${company.infoFilename})}"> </td>-->
+<!--            <td> <th:href ="@{/img/{filename}(filename = ${company.filename})}"></td>&ndash;&gt;-->
+            <td><a th:href="/file/e9d56f11-dd77-40be-b385-d19ba59c8dbf.5_maXQOI0cw.jpg" download>Скачать файл</a><td>
+
         <tr/>
 
 
