adding uploads files and logo

--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -132,7 +132,7 @@
             </td>
 
             <td>
-                <input type="file" name="file" id="customFile2">
+                <input type="file" name="infoFile" id="customFile2">
                 <label class="custom-file-label" for="customFile2">Choose PDF file</label>
             </td>
         <tr/>
