--- a/src/main/resources/templates/Main.html
+++ b/src/main/resources/templates/Main.html
@@ -1,9 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <title>Test</title>
 </head>
 <body>
+<div th:replace="navbar"></div>
+<br> <br>
 
 <div>
 <!--<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>-->
@@ -13,12 +18,6 @@
 </div>
 
 
-<a href="http://localhost:8080/addCategory">Adding category</a>
-<br> <br>
-<a href="http://localhost:8080/sub">Adding sub category</a>
-<br> <br>
-<a href="http://localhost:8080/view">_View_</a>
-<br> <br>
 
 <style>
     table {
@@ -128,12 +127,12 @@
 
             <td>
                 <input type="file" name="file" id="customFile">
-            <label class="custom-file-label" for="customFile">Choose file</label>
+<!--            <label class="custom-file-label" for="customFile">Choose file</label>-->
             </td>
 
             <td>
                 <input type="file" name="infoFile" id="customFile2">
-                <label class="custom-file-label" for="customFile2">Choose PDF file</label>
+<!--                <label class="custom-file-label" for="customFile2">Choose PDF file</label>-->
             </td>
         <tr/>
 
@@ -172,5 +171,8 @@
   <input type="submit" value="Save" />
 
   </form>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
   </html>
