--- a/src/main/resources/templates/sub.html
+++ b/src/main/resources/templates/sub.html
@@ -2,8 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Test tak skazat</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="navbar"></div>
+<br> <br>
 
 <h2>Adding sub category</h2>
 <th> </th>
@@ -13,9 +17,7 @@
         list-style: none;	/* Убираем маркеры списка */
     }
 </style>
-<a style="margin-: 32px" href="http://localhost:8080/addCategory">Adding category</a>
-<br> <br>
-<a style="margin-: 32px" href="http://localhost:8080">Main</a>
+
 <br> <br>
 
 <form th:action="@{/sub}"  method="POST">
@@ -48,5 +50,8 @@
     <br> <br>
     <input type="submit" value="Save" />
 </form>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
