--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,9 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Test</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-
+<div th:replace="navbar"></div>
+<br> <br>
 <h2>View company</h2>
 
 <style>
@@ -22,11 +25,7 @@
     }
 </style>
 
-<a style="margin-: 32px" href="http://localhost:8080">Main</a>
 <br> <br>
-
-
-
 
 <form th:action="@{/view}"  method="POST">
 
@@ -178,9 +177,10 @@
 <!--            <td> <img th:src="@{/img/{filename}(filename = ${company.filename})}"></td>-->
 <!--            <td> <hr th:src="@{/file/{infoFilename}(infoFilename = ${company.infoFilename})}"> </td>-->
 <!--            <td> <th:href ="@{/img/{filename}(filename = ${company.filename})}"></td>&ndash;&gt;-->
-<!--            <td> <a th:href="@{|/file/download|}">DOWN<span th:text="${company.infoFilename}"></span></a></td>-->
+            <td> <a th:href="@{/file/download/{infoFilename}(infoFilename=${company.infoFilename})}">down<span th:text="${company.infoFilename}"></span></a></td>
 
 <!--            <td><a download="results.csv" th:href=""</a></td>-->
+<!--            <a th:href="@{|/products/download?id=${product.id}|}"><span th:text="${product.name}"></span></a>-->
 
             <!--            <td><a th:href="/file/C:/Java/Kobi-s-project/uploads/e9d56f11-dd77-40be-b385-d19ba59c8dbf.5_maXQOI0cw.jpg" download>Скачать файл</a><td>-->
 
@@ -193,5 +193,8 @@
 
 
 </form>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
